# octo-ctools

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-all.sh  octo-ctools-config.h.in
Cmk/: mainconfig.cmake
hexdump/: CMakeLists.txt  Makefile  Makefile.freebsd  README.md  hexdump-debug.wpj  hexdump.wpj
hexdump/include/: file-reader.h  hexops.h  private-file-header.h
hexdump/src/: file-reader.c  hexdump.c  hexops.c
lib/: README.md
lib/include/: basedef.h  clist.h  compat.h
lib/include/_compat/: _stdint.h
lib/src/: clist.c  rbuffer.c
octo-lib/: CMakeLists.txt  Makefile  octo-ctools-config.h.in
octo-lib/include/: basedef.h  clist.h  file-reader.h  on-error.h  private-file.h  rbuffer.h  version.h
octo-lib/include/_compat/: _stdbool.h
octo-lib/src/: clist.c  file-reader.c  on-error.c  private-file.c  rbuffer.c  version.c
